--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "jszip-cli": "dist/cli.js"
   },
   "dependencies": {
+    "@types/jszip": "3.1.4",
+    "@types/node": "10.9.3",
     "commander": "2.17.1",
     "jszip": "3.1.5"
   },
