--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "tsc",
-    "dist": "yarn clean && yarn build"
+    "dist": "yarn clean && yarn build",
+    "prettier": "prettier --write \"src/*.ts\" \"spec/*.js\""
   },
   "version": "1.0.0"
 }
