--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "commander": "2.17.1",
     "jszip": "3.1.5"
   },
+  "description": "A zip CLI based on jszip.",
   "devDependencies": {
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
@@ -28,5 +29,6 @@
     "prettier": "prettier --write \"src/*.ts\" \"spec/*.js\"",
     "test": "yarn dist"
   },
+  "types": "dist/index.d.ts",
   "version": "1.0.0"
 }
