--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
+    "jasmine": "3.2.0",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
     "typescript": "3.0.3"
@@ -27,7 +28,7 @@
     "clean": "rimraf dist",
     "dist": "yarn clean && yarn build",
     "prettier": "prettier --write \"src/*.ts\" \"spec/*.js\"",
-    "test": "yarn dist"
+    "test": "yarn dist && jasmine"
   },
   "types": "dist/index.d.ts",
   "version": "1.0.0"
