--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "jszip-cli": "dist/cli.js"
   },
   "dependencies": {
+    "@types/commander": "2.12.2",
     "@types/jszip": "3.1.4",
     "@types/node": "10.9.4",
     "commander": "2.17.1",
