--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/commander": "2.12.2",
     "@types/jszip": "3.1.4",
     "@types/node": "10.9.4",
+    "@types/progress": "2.0.1",
     "commander": "2.17.1",
     "jszip": "3.1.5",
-    "logdown": "3.2.7"
+    "logdown": "3.2.7",
+    "progress": "2.0.0"
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
