--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "jasmine": "3.2.0",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.15.0",
+    "tslint-plugin-prettier": "1.3.0",
     "typescript": "3.0.3"
   },
   "files": [
@@ -30,6 +33,7 @@
     "build": "tsc",
     "clean": "rimraf dist",
     "dist": "yarn clean && yarn build",
+    "lint": "tslint --project tsconfig.json",
     "prettier": "prettier --write \"src/*.ts\" \"spec/*.js\"",
     "test": "yarn dist && jasmine"
   },
