--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
-    "jasmine": "3.2.0",
+    "@types/jasmine": "2.8.8",
+    "jasmine-ts": "0.2.1",
+    "mv": "2.1.1",
     "prettier": "1.14.3",
     "rimraf": "2.6.2",
     "tslint": "5.11.0",
@@ -32,10 +34,11 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
-    "dist": "yarn clean && yarn build",
+    "dist": "yarn clean && yarn build && yarn move",
     "lint": "tslint --project tsconfig.json",
-    "prettier": "prettier --write \"src/*.ts\" \"spec/*.js\"",
-    "test": "yarn dist && jasmine"
+    "move": "mv dist/src/* dist/ && rimraf dist/src",
+    "prettier": "prettier --write \"**/*.ts\"",
+    "test": "jasmine-ts"
   },
   "types": "dist/index.d.ts",
   "version": "1.4.2"
