--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/jszip": "3.1.4",
     "@types/node": "10.12.7",
     "@types/progress": "2.0.1",
+    "husky": "1.2.0",
     "jasmine": "3.3.0",
+    "lint-staged": "8.1.0",
     "prettier": "1.15.2",
     "rimraf": "2.6.2",
     "ts-node": "7.0.1",
@@ -31,6 +33,11 @@
   "files": [
     "dist"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "keywords": [
     "cli",
     "jszip",
@@ -38,6 +45,16 @@
     "zip"
   ],
   "license": "MIT",
+  "lint-staged": {
+    "*.ts": [
+      "tslint --config tslint.json --project tsconfig.json --fix",
+      "git add"
+    ],
+    "*.{json,md,css}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "main": "dist/index.js",
   "name": "@ffflorian/jszip-cli",
   "repository": "https://github.com/ffflorian/jszip-cli.git",
