--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
+    "@semantic-release/git": "7.0.8",
     "@types/cosmiconfig": "5.0.3",
     "@types/fs-extra": "5.0.5",
     "@types/jasmine": "3.3.9",
@@ -24,6 +25,7 @@
     "lint-staged": "8.1.5",
     "prettier": "1.16.4",
     "rimraf": "2.6.3",
+    "semantic-release": "15.13.3",
     "ts-node": "8.0.3",
     "tslint": "5.14.0",
     "tslint-config-prettier": "1.18.0",
@@ -66,8 +68,8 @@
     "lint:other": "yarn prettier --list-different",
     "lint:ts": "tslint --config tslint.json --project tsconfig.json \"**/*.ts\"",
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.ts\"",
+    "release": "semantic-release",
     "test": "ts-node -P tsconfig.jasmine.json node_modules/jasmine/bin/jasmine"
   },
-  "types": "dist/index.d.ts",
   "version": "2.1.4"
 }
