--- a/.releaserc
+++ b/.releaserc
@@ -1,6 +1,10 @@
 {
   "plugins": [
-    ["@semantic-release/git", {
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/npm",
+    ["@semantic-release/github", {
       "successComment": false,
       "releasedLabels": false
     }],
