--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
+    "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
     "@types/cosmiconfig": "5.0.3",
     "@types/fs-extra": "5.0.5",
