--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "lint:other": "yarn prettier --list-different",
     "lint:ts": "tslint --project tsconfig.json",
     "lint:ts:spec": "tslint --project tsconfig.jasmine.json",
-    "prettier": "prettier --ignore-path .gitignore \"*.{json,md}\"",
+    "prettier": "prettier \"*.{json,md}\"",
     "release": "semantic-release",
     "test": "ts-node -P tsconfig.jasmine.json node_modules/.bin/jasmine"
   },
