--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
+    "@ffflorian/prettier-config": "0.0.3",
     "@semantic-release/changelog": "3.0.2",
     "@semantic-release/git": "7.0.8",
     "@types/cosmiconfig": "5.0.3",
@@ -44,21 +45,22 @@
   ],
   "license": "MIT",
   "lint-staged": {
-    "src/**/*.ts": [
-      "tslint --project tsconfig.json --fix",
+    "*.{json,md}": [
+      "prettier --write",
       "git add"
     ],
     "spec/**/*.ts": [
       "tslint --project tsconfig.jasmine.json --fix",
       "git add"
     ],
-    "*.{json,md}": [
-      "prettier --write",
+    "src/**/*.ts": [
+      "tslint --project tsconfig.json --fix",
       "git add"
     ]
   },
   "main": "dist/index.js",
   "name": "@ffflorian/jszip-cli",
+  "prettier": "@ffflorian/prettier-config",
   "repository": "https://github.com/ffflorian/jszip-cli.git",
   "scripts": {
     "build": "tsc",
