--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/fs-extra": "7.0.0",
     "@types/jasmine": "3.3.12",
     "@types/jszip": "3.1.5",
-    "@types/node": "12.0.1",
+    "@types/node": "~12",
     "@types/progress": "2.0.3",
     "husky": "2.2.0",
     "jasmine": "3.4.0",
