--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jasmine": "3.4.0",
     "lint-staged": "8.2.0",
     "prettier": "1.18.2",
+    "publish-flat": "1.1.2",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.12",
     "ts-node": "8.2.0",
@@ -67,6 +68,7 @@
     "build": "tsc",
     "clean": "rimraf dist",
     "dist": "yarn clean && yarn build",
+    "flatten": "publish-flat -o flattened",
     "fix": "yarn fix:other && yarn fix:ts",
     "fix:other": "yarn prettier --write",
     "fix:ts": "yarn lint:ts --fix && yarn lint:ts:spec --fix",
