fix: Use postversion when publishing

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "lint:other": "yarn prettier --list-different",
     "lint:ts": "tslint --project tsconfig.json",
     "lint:ts:spec": "tslint --project tsconfig.jasmine.json",
+    "postversion": "node ../node_modules/publish-flat/cli-copy.js -i package.json -o ../package.json version",
     "prettier": "prettier \"*.{json,md}\"",
     "release": "semantic-release",
     "start": "ts-node src/cli.ts",
