chore: Switch to GPL v3

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "typescript",
     "zip"
   ],
-  "license": "MIT",
+  "license": "GPL-3.0",
   "lint-staged": {
     "*.{json,md}": [
       "prettier --write",
