--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
+    "@ffflorian/eslint-config": "0.3.1",
     "@ffflorian/prettier-config": "0.0.6",
     "@ffflorian/semantic-release-config": "0.2.0",
-    "@ffflorian/tslint-config": "0.7.1",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
     "@types/fs-extra": "8.1.0",
@@ -23,6 +23,19 @@
     "@types/jszip": "3.1.7",
     "@types/node": "~12",
     "@types/progress": "2.0.3",
+    "@typescript-eslint/eslint-plugin": "2.31.0",
+    "@typescript-eslint/parser": "2.31.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.0.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jasmine": "4.1.1",
+    "eslint-plugin-jsdoc": "25.0.1",
+    "eslint-plugin-no-unsanitized": "3.1.1",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-simple-import-sort": "5.0.3",
+    "eslint-plugin-sort-keys-fix": "1.1.1",
+    "eslint-plugin-typescript-sort-keys": "0.8.0",
     "husky": "4.2.5",
     "jasmine": "3.5.0",
     "lint-staged": "10.2.2",
@@ -30,10 +43,8 @@
     "publish-flat": "1.4.0",
     "rimraf": "3.0.2",
     "semantic-release": "17.0.7",
+    "true": "0.0.4",
     "ts-node": "8.10.1",
-    "tslint": "6.1.2",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.3.0",
     "typescript": "3.8.3"
   },
   "engines": {
@@ -54,10 +65,10 @@
       "prettier --write"
     ],
     "spec/**/*.ts": [
-      "tslint --project tsconfig.jasmine.json --fix"
+      "eslint --config .eslintrc.spec.json --fix"
     ],
     "src/**/*.ts": [
-      "tslint --project tsconfig.json --fix"
+      "eslint --fix"
     ]
   },
   "main": "dist/index.js",
@@ -72,13 +83,14 @@
     "clean": "rimraf dist",
     "dist": "yarn clean && yarn build",
     "flatten": "publish-flat -o flattened",
-    "fix": "yarn fix:other && yarn fix:ts",
+    "fix": "yarn fix:other && yarn fix:ts && yarn fix:ts:spec",
     "fix:other": "yarn prettier --write",
-    "fix:ts": "yarn lint:ts --fix && yarn lint:ts:spec --fix",
+    "fix:ts": "yarn lint:ts --fix",
+    "fix:ts:spec": "yarn lint:ts:spec --fix",
     "lint": "yarn lint:ts && yarn lint:ts:spec && yarn lint:other",
     "lint:other": "yarn prettier --list-different",
-    "lint:ts": "tslint --project tsconfig.json",
-    "lint:ts:spec": "tslint --project tsconfig.jasmine.json",
+    "lint:ts": "eslint --ignore-path .gitignore --ext .ts src/",
+    "lint:ts:spec": "eslint --ignore-path .gitignore --ext .ts --config .eslintrc.spec.json spec/",
     "postversion": "node ../node_modules/publish-flat/cli-copy.js -i package.json -o ../package.json version",
     "prettier": "prettier \"*.{json,md}\"",
     "release": "semantic-release",
