--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
   "extends": "@ffflorian/eslint-config",
   "overrides": [
     {
+      "globals": {
+        "NodeJS": "readonly"
+      },
       "files": "*.ts",
       "rules": {
         "@typescript-eslint/typedef": "off"
