--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
-    "@ffflorian/eslint-config": "0.6.2",
+    "@ffflorian/eslint-config": "0.8.1",
     "@ffflorian/prettier-config": "0.1.2",
     "@ffflorian/semantic-release-config": "0.5.0",
     "@semantic-release/changelog": "5.0.1",
@@ -22,8 +22,8 @@
     "@types/jasmine": "3.6.9",
     "@types/node": "~14",
     "@types/progress": "2.0.3",
-    "@typescript-eslint/eslint-plugin": "4.0.0",
-    "@typescript-eslint/parser": "3.10.1",
+    "@typescript-eslint/eslint-plugin": "4.20.0",
+    "@typescript-eslint/parser": "4.20.0",
     "babel-eslint": "10.1.0",
     "eslint": "7.23.0",
     "eslint-config-prettier": "8.1.0",
@@ -35,6 +35,7 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-sort-keys-fix": "1.1.1",
     "eslint-plugin-typescript-sort-keys": "1.5.0",
+    "eslint-plugin-unused-imports": "1.1.1",
     "husky": "4.3.8",
     "jasmine": "3.7.0",
     "lint-staged": "10.5.4",
