--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "description": "A zip CLI based on jszip.",
   "devDependencies": {
+    "@evilmartians/lefthook": "1.1.1",
     "@ffflorian/eslint-config": "0.8.2",
     "@ffflorian/prettier-config": "0.1.3",
     "@ffflorian/semantic-release-config": "0.5.1",
@@ -37,9 +38,7 @@
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
     "eslint-plugin-unused-imports": "1.1.5",
-    "husky": "4.3.8",
     "jasmine": "4.3.0",
-    "lint-staged": "13.0.3",
     "prettier": "2.7.1",
     "publish-flat": "1.4.1",
     "rimraf": "3.0.2",
@@ -61,17 +60,6 @@
     "zip"
   ],
   "license": "GPL-3.0",
-  "lint-staged": {
-    "*.{json,md}": [
-      "prettier --write"
-    ],
-    "spec/**/*.ts": [
-      "eslint --config .eslintrc.spec.json --fix"
-    ],
-    "src/**/*.ts": [
-      "eslint --fix"
-    ]
-  },
   "main": "dist/index.js",
   "name": "@ffflorian/jszip-cli",
   "prettier": "@ffflorian/prettier-config",
@@ -93,7 +81,7 @@
     "lint:ts": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:ts:spec": "eslint --ignore-path .gitignore --ext .ts --config .eslintrc.spec.json spec/",
     "postversion": "node ../node_modules/publish-flat/cli-copy.js -i package.json -o ../package.json version",
-    "prettier": "prettier \"*.{json,md}\"",
+    "prettier": "prettier \"*.{json,md,yml}\"",
     "release": "semantic-release",
     "start": "cross-env NODE_DEBUG=\"jszip-cli/*\" ts-node src/cli.ts",
     "test": "ts-node -P tsconfig.jasmine.json node_modules/.bin/jasmine"
